# week3-week4-CRUD/server.js
@@ -12,23 +12,24 @@ const authRoutes = require("./routes/authRoutes");
 const protectedRoutes = require("./routes/protectedRoutes");
 
 const app = express();
-const PORT = process.env.PORT || 8080;
+const PORT = process.env.PORT;
+// || 8080;
 
-// CORS Configuration
-const corsOptions = {
-    origin: [
-      "https://cse341-6wo0.onrender.com", // Swagger on Render
-      "http://localhost:8080"             // Local testing
-    ],
-    credentials: true
-  };
+// // CORS Configuration
+// const corsOptions = {
+//     origin: [
+//       "https://cse341-6wo0.onrender.com", // Swagger on Render
+//       "http://localhost:8080"             // Local testing
+//     ],
+//     credentials: true
+//   };
 
 // Middleware
 app.use(session({ secret: process.env.SESSION_SECRET, resave: false, saveUninitialized: true }));
 app.use(passport.initialize());
 app.use(passport.session());
 app.use(express.json());
-app.use(cors(corsOptions));
+app.use(cors());
 
 // MongoDB
 mongoose.connect(process.env.MONGO_URI)
