# week3-week4-CRUD/swagger.json
@@ -7,9 +7,7 @@
   },
   "host": "cse341-6wo0.onrender.com",
   "basePath": "/",
-  "schemes": [
-    "https"
-  ],
+  "schemes": [ "http", "https" ],
   "securityDefinitions": {
     "OAuth2": {
       "type": "oauth2",
